# wordlywise

./: .gitignore  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 0b0b69990fa2_added_post_model.py  a9b0ad5cbf2d_initial_migration.py
app/: main.py
app/api/: auth.py  users.py  word.py
app/core/: config.py  security.py
app/db/: base.py  session.py
app/db/models/: post.py  user.py  user_history.py
app/schemas/: ai.py  user.py  user_history.py
app/services/: ai_service.py
app/services/utils/: ai_client.py  ai_models.py  ai_prompts.py
